<resources>
    <string name="full_wday_month_day_no_year">EEEE, MMMM d</string>
    <string name="full_wday_day_month_no_year">EEEE, d MMMM</string>
    <string name="sview_cover_wday_month_day_no_year">E, MMMM d</string>
    <string name="sview_cover_wday_day_month_no_year">E, d MMMM</string>
    <string name="sview_cover_dual_wday_month_day_no_year">E, MMM d</string>
    <string name="sview_cover_dual_wday_day_month_no_year">E, d MMM</string>
    <string name="clear_cover_wday_day">E</string>
    <string name="clear_cover_month_day_no_year">MMM d</string>
    <string name="clear_cover_day_month_no_year">d MMM</string>
    <string name="mini_cover_month_day_no_year">MMMM d</string>
    <string name="mini_cover_day_month_no_year">d MMMM</string>
    <string name="china_country_name">china</string>
    <string name="date_format_for_display">EEEMMMMd</string>
    <string name="date_format_for_tts">EEEEMMMMd</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="ok">@android:string/ok</string>
    <string name="back">Back</string>
    <string name="set">Set</string>
    <string name="s_view_cover_set_wallpaper">Set as wallpaper</string>
    <string name="s_view_cover_set_style_clock">Set as Style Clock</string>
    <string name="clearcover_no_missed_event">You have no missed events</string>
    <string name="clearcover_1_missed_call">You have 1 missed call</string>
    <string name="clearcover_1_unread_message">You have 1 unread message</string>
    <string name="clearcover_n_missed_calls">You have %1$d missed calls</string>
    <string name="clearcover_n_unread_messages">You have %1$d unread messages</string>
    <string name="clearcover_calls_and_messages">You have %1$d missed calls and %2$d unread messages</string>
    <string name="zzz_tts_temp_celsius">Celsius</string>
    <string name="zzz_tts_temp_fahrenheit">Fahrenheit</string>
    <string name="zzz_tts_temperature">Degree</string>
    <string name="emulator_title">Cover emulator</string>
    <string name="emulator_show_ui">Show UI</string>
    <string name="emulator_hide_ui">Hide UI</string>
    <string name="emulator_close">Close</string>
    <string name="volumepanel_notification">Notifications</string>
    <string name="s_view_cover_shortcuts_title_text">Shortcuts</string>
    <string name="s_view_cover_shortcuts_camera_text">Camera</string>
    <string name="s_view_cover_shortcuts_settings_text">Settings</string>
    <string name="s_view_cover_shortcuts_favorite_text">Favourite contacts</string>
    <string name="s_view_cover_shortcuts_light_text">Torch</string>
    <string name="s_view_cover_shortcuts_heart_text">Heart rate</string>
    <string name="s_view_cover_shortcuts_quick_memo_text">Action memo</string>
    <string name="select_background_color">Set S View window wallpaper</string>
    <string name="select_background_color_title">Set wallpaper</string>
    <string name="s_view_stylized_clock_theme">Set style clock</string>
    <string name="s_view_window_theme">S View window wallpaper</string>
    <string name="s_view_info_cover">Select items to display</string>
    <string name="s_view_screen_roaming">Roaming</string>
    <string name="s_view_screen_home">Home</string>
    <string name="battery_charging_percent">Charging: %d%%</string>
    <string name="battery_wireless_charging_percent">Charging wirelessly: %d%%</string>
    <string name="battery_wireless_fast_charging_percent">Fast charging wirelessly: %d%%</string>
    <string name="battery_charged">Charged.</string>
    <string name="s_view_cover_transport_prev_description">Previous</string>
    <string name="s_view_cover_transport_next_description">Next</string>
    <string name="s_view_cover_transport_pause_description">Pause</string>
    <string name="s_view_cover_transport_play_description">Play</string>
    <string name="s_view_cover_transport_stop_description">Stop</string>
    <string name="s_view_cover_transport_volume_description">Volume</string>
    <string name="s_view_cover_transport_playlist_description">Playlists</string>
    <string name="s_view_cover_missed_event_secured_popup">Device locked. Open cover to view more details.</string>
    <string name="s_view_cover_open_cover_popup">Open cover to set wallpaper.</string>
    <string name="s_view_cover_open_cover_popup_view_detail">Open cover to view details.</string>
    <string name="s_view_cover_open_cover_popup_for_detail_message">Open cover to view message details.</string>
    <string name="s_view_cover_open_cover_popup_for_detail_call">Open cover to view call details.</string>
    <string name="s_view_cover_missed_event_button_accessibiliy">Swipe with two fingers to move to missed event page</string>
    <string name="s_view_cover_settings_button_accessibiliy">Swipe with two fingers to go to Settings</string>
    <string name="s_view_cover_camera_button_accessibiliy">Double tap and drag to open Camera.</string>
    <string name="s_view_cover_favourite_button_accessibiliy">Double tap and drag to open Favourite contacts.</string>
    <string name="s_view_cover_emergency_timer_d">day</string>
    <string name="s_view_cover_emergency_timer_h">h</string>
    <string name="s_view_cover_emergency_timer_m">m</string>
    <string name="accessibility_battery_level">%d percent battery</string>
    <string name="s_view_cover_emergency_battery_not_measured">Not measured</string>
    <string name="s_view_cover_open_popup_favorite">Device locked. Open cover to view favourite contacts.</string>
    <string name="digital_clock_style_none">none</string>
    <string name="mini_view_cover_settings_description">Open the cover to go to S View Cover settings.</string>
    <string name="s_view_cover_warn_popup_stylized_clock">Wallpapers, Pedometer information, and Weather information cannot be displayed while a style clock is displayed on S View window.</string>
    <string name="s_view_stylized_clock_next_style">Next style</string>
    <string name="s_view_stylized_clock_prev_style">Previous style</string>
    <string name="s_view_wallpaper_selected_tts">Wallpaper %1$d of %2$d</string>
    <string name="popup_do_not_show_gain">Do not show again.</string>
    <string name="stms_appgroup">K_DEV_UIFW_CoverService</string>
    <string name="cover_open_the_cover">Open the Cover</string>
    <string name="opencover_warning_content">Open cover to use device.</string>
    <string name="pinwindowcover_warning_content">To use the pinned app, open the cover.</string>
    <string name="pinwindowcover_camerapage_warning_content">"Pin Window is enabled. 
 Open the cover and unpin applications."</string>
    <string name="battery_fast_charging_percent">Fast charging: %d%%</string>
    <string name="system_ui_date_pattern">@android:string/system_ui_date_pattern</string>
    <string name="abbrev_wday_month_day_no_year">EEEEMMMMd</string>
    <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
    <string name="clock_12hr_format">hm</string>
    <string name="clock_24hr_format">Hm</string>
    <string name="status_view_wday_day_month_no_year">E, d MMMM</string>
    <string name="kg_date_format_for_display">EEEMMMMd</string>
    <string name="kg_date_format_for_tts">EEEEMMMMd</string>
    <string name="status_view_12_hours_format">h:mm</string>
    <string name="status_view_24_hours_format">kk:mm</string>
    <string name="status_view_ampm_for_12_hours">aa</string>
    <string name="status_view_ampm_for_24_hours" />
    <string name="theme_pin_enter_text">OK</string>
    <string name="app_name">Keyguard</string>
    <string name="keyguard_password_enter_pin_code">Type PIN code</string>
    <string name="keyguard_password_enter_puk_code">Type SIM PUK and new PIN code</string>
    <string name="keyguard_password_enter_puk_prompt">SIM PUK code</string>
    <string name="keyguard_password_enter_pin_prompt">New SIM PIN code</string>
    <string name="keyguard_password_entry_touch_hint"><font size="17">Touch to type password</font></string>
    <string name="keyguard_password_enter_password_code">Type password to unlock</string>
    <string name="keyguard_password_enter_pin_password_code">Type PIN to unlock</string>
    <string name="keyguard_password_wrong_pin_code">Incorrect PIN code.</string>
    <string name="keyguard_charged">Fully charged</string>
    <string name="keyguard_plugged_in">Charging: %d%%</string>
    <string name="keyguard_plugged_in_charging_fast">Charging rapidly</string>
    <string name="keyguard_plugged_in_charging_slowly">Charging slowly</string>
    <string name="keyguard_low_battery">Connect your charger.</string>
    <string name="keyguard_connect_charger">Connect charger</string>
    <string name="keyguard_instructions_when_pattern_disabled">Press Menu to unlock.</string>
    <string name="keyguard_network_locked_message">Network locked</string>
    <string name="kg_missing_sim_message_short">No SIM card</string>
    <string name="keyguard_missing_sim_message_short">No SIM card</string>
    <string name="keyguard_missing_sim_message">Insert USIM card, then restart device</string>
    <string name="keyguard_missing_sim_instructions">Insert a SIM card.</string>
    <string name="keyguard_accessibility_password_unlock">Password unlock.</string>
    <string name="accessibility_ime_switch_button">Switch input method button.</string>
    <string name="kg_lockscreen_emergency_call_button_text">Emergency call</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="accessibility_desc_settings">Settings</string>
    <string name="quick_settings_dnd_label">Do not disturb</string>
    <string name="quick_settings_bluetooth_label">Bluetooth</string>
    <string name="quick_settings_wifi_label">Wi-Fi</string>
    <string name="quick_settings_cast_title">Cast</string>
    <string name="quick_settings_more_settings">SETTINGS</string>
    <string name="quick_settings_done">Done</string>
    <string name="quick_settings_hotspot_label">Hotspot</string>
    <string name="quick_settings_cellular_detail_title">Cellular data</string>
    <string name="system_ui_tuner">System UI Tuner</string>
    <string name="show_battery_percentage">Show embedded battery percentage</string>
    <string name="show_battery_percentage_summary">Show battery level percentage inside the status bar icon when not charging</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="status_bar">Status bar</string>
    <string name="demo_mode">Demo mode</string>
    <string name="status_bar_ethernet">Ethernet</string>
    <string name="status_bar_alarm">Alarm</string>
    <string name="status_bar_work">Work profile</string>
    <string name="status_bar_airplane">Airplane mode</string>
    <string name="tuner_persistent_warning">These experimental features may change, break, or disappear in future releases. Proceed with caution.</string>
    <string name="notification_block">Block</string>
    <string name="dialog_title_block_notification">Block app alerts</string>
    <string name="dialog_msg_block_notification">Alerts from this app, including notifications, sounds and vibration, will be blocked.</string>
    <string name="qs_edit_setting_edit_button">EDIT</string>
    <string name="quick_connect_button">Quick connect</string>
    <string name="tap_to_connect">Tap here to connect devices</string>
    <string name="sound_path_button">Audio Path</string>
    <string name="noti_setting_button_text">Noti. settings</string>
    <string name="accessibility_noti_setting_button">Notification settings</string>
    <string name="accessibility_camera_button_nexti">Camera</string>
    <string name="accessibility_phone_icon_nexti">Phone</string>
    <string name="accessibility_unlock_button_nexti">Unlock</string>
    <string name="accessibility_email_icon_nexti">docomo mail</string>
    <string name="accessibility_mic_button_nexti">Shabette-Concier</string>
</resources>