<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.phone.DcmKeyguardBottomAreaShortcutView android:id="@id/dcm_keyguard_bottom_area" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.systemui.statusbar.phone.KeyguardIndicationTextView android:textAppearance="?android:textAppearance" android:textSize="@dimen/dcm_keyguard_indication_text_size" android:textColor="@color/keyguard_message_area_color" android:gravity="center_horizontal" android:layout_gravity="bottom|center" android:id="@id/keyguard_indication_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="100.0dip" android:fontFamily="sec-roboto-light" style="@style/keyguard_text_shadow" />
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/keyguard_bouncer_frame" android:layout_width="fill_parent" android:layout_height="@dimen/dcm_keyguard_affordance_height">
        <ImageView android:layout_gravity="bottom" android:id="@id/camera_button" android:layout_width="@dimen/dcm_keyguard_affordance_width" android:layout_height="fill_parent" android:src="@drawable/ic_d_camera_lock" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_camera_button_nexti" />
        <TextView android:textSize="@dimen/dcm_keyguard_affordance_text_size" android:textColor="@color/ic_call_lock" android:gravity="center|left" android:layout_gravity="bottom" android:id="@id/call_icon" android:background="@drawable/ic_call_lock" android:visibility="gone" android:layout_width="@dimen/dcm_keyguard_affordance_width" android:layout_height="fill_parent" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_phone_icon_nexti" />
        <ImageView android:layout_gravity="bottom" android:id="@id/lock_icon" android:layout_width="@dimen/dcm_keyguard_affordance_width" android:layout_height="fill_parent" android:src="@drawable/ic_lock_lock_normal" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_unlock_button_nexti" />
        <TextView android:textSize="@dimen/dcm_keyguard_affordance_text_size" android:textColor="@color/ic_email_lock" android:gravity="center|left" android:layout_gravity="bottom" android:id="@id/email_icon" android:background="@drawable/ic_email_lock" android:visibility="gone" android:layout_width="@dimen/dcm_keyguard_affordance_width" android:layout_height="fill_parent" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_email_icon_nexti" />
        <ImageView android:layout_gravity="bottom" android:id="@id/phone_button" android:layout_width="@dimen/dcm_keyguard_affordance_width" android:layout_height="fill_parent" android:src="@drawable/ic_d_mic_lock" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_mic_button_nexti" />
    </LinearLayout>
</com.android.systemui.statusbar.phone.DcmKeyguardBottomAreaShortcutView>