<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.policy.CarrierLabelAndClearButtonLayout android:layout_gravity="center_horizontal" android:id="@id/carrier_and_clear_layout" android:visibility="gone" android:layout_width="@dimen/notification_panel_width" android:layout_height="@dimen/carrier_and_clear_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/TextAppearance.StatusBar.Expanded.CarrierLabel" android:gravity="center_vertical" android:layout_gravity="start" android:id="@id/carrier_label" android:focusable="false" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@null" android:includeFontPadding="false" />
    <TextView android:textAppearance="@style/TextAppearance.StatusBar.Expanded.ClearButton" android:gravity="center_vertical" android:layout_gravity="start" android:id="@id/noti_setting_button" android:background="@drawable/noti_setting_and_clear_button_bg" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/noti_setting_button_text" android:includeFontPadding="false" android:contentDescription="@string/accessibility_noti_setting_button" />
    <TextView android:textAppearance="@style/TextAppearance.StatusBar.Expanded.ClearButton" android:gravity="center_vertical" android:layout_gravity="end" android:id="@id/clear_button" android:background="@drawable/noti_setting_and_clear_button_bg" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/status_bar_clear_all_button" android:includeFontPadding="false" />
</com.android.systemui.statusbar.policy.CarrierLabelAndClearButtonLayout>