<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/notification_right_group" android:background="@drawable/notification_material_bg_for_swipe" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/notification_min_height" android:paddingStart="@dimen/notification_swipe_padding"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:enabled="true" android:gravity="start|center" android:orientation="vertical" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="3.0" android:paddingStart="@dimen/notification_swipe_side_padding">
        <TextView android:textSize="@dimen/notification_swipe_title_text_size" android:textColor="@color/notification_swipe_title_text_color" android:gravity="start|center" android:id="@id/notification_right_title" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/notification_swipe_title_height" android:text="@string/dialog_title_block_notification" />
        <TextView android:textSize="@dimen/notification_swipe_content_text_size" android:textColor="@color/notification_swipe_content_text_color" android:gravity="start|center" android:id="@id/notification_right_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_msg_block_notification" />
    </LinearLayout>
    <TextView android:textSize="@dimen/notification_swipe_button_text_size" android:textStyle="bold" android:textColor="@color/notification_swipe_button_text_color" android:gravity="end|center" android:id="@id/notification_right_button" android:background="@drawable/ripple_swipe" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/notification_block" android:shadowColor="@color/notification_swipe_button_text_shadow_color" android:shadowDy="@integer/notification_swipe_shadow_dy" android:shadowRadius="@integer/notification_swipe_shadow_radius" android:textAllCaps="true" android:paddingStart="@dimen/notification_swipe_button_inside_padding" android:paddingEnd="@dimen/notification_swipe_button_outside_padding" />
</LinearLayout>