<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.securityview.KeyguardRecoveryView android:gravity="bottom" android:orientation="vertical" android:id="@id/keyguard_recovery_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/keyguard_accessibility_password_unlock"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:androidprv="http://schemas.android.com/apk/res-auto">
    <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="7.0" />
    <include android:gravity="center" android:layout_gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/kg_password_message_area_margin_bottom" layout="@layout/keyguard_message_area" />
    <FrameLayout android:theme="@style/PasswordTheme" android:layout_gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/kg_password_container_margin_bottom">
        <EditText android:textAppearance="@style/TextAppearance.passwordEntry" android:textStyle="normal" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/passwordEntry" android:background="@drawable/keyguard_security_input_box" android:padding="2.0dip" android:layout_width="@dimen/kg_security_input_box_width" android:layout_height="@dimen/kg_security_input_box_height" android:singleLine="true" android:maxLength="16" android:inputType="textPassword" android:privateImeOptions="inputType=option" android:imeOptions="actionDone|flagForceAscii" />
        <ImageView android:layout_gravity="end|center" android:id="@id/switch_ime_button" android:background="?android:selectableItemBackground" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:src="@drawable/lock_ic_password_sip" android:contentDescription="@string/accessibility_ime_switch_button" />
    </FrameLayout>
    <com.android.keyguard.EmergencyButton android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/emergency_call_button" android:background="@drawable/ripple_effect_transparent_button_drawable" android:paddingLeft="@dimen/keyguard_emergency_button_inner_padding" android:paddingRight="@dimen/keyguard_emergency_button_inner_padding" android:layout_width="wrap_content" android:layout_height="31.0dip" android:layout_marginBottom="@dimen/kg_password_emergency_button_margin_bottom" android:text="@string/kg_lockscreen_emergency_call_button_text" style="@style/keyguard_button_style" />
</com.android.keyguard.securityview.KeyguardRecoveryView>