<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.phone.TWStatusBarHeaderView android:layout_gravity="fill_horizontal|bottom|center" android:id="@id/header" android:background="@color/system_secondary_color" android:clickable="false" android:layout_width="@dimen/notification_panel_width" android:layout_height="@dimen/status_bar_header_height" android:baselineAligned="false" android:layout_marginStart="@dimen/qs_panel_side_padding" android:layout_marginEnd="@dimen/qs_panel_side_padding"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:systemui="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/date_timeView" android:padding="@dimen/headerview_date_timeView_start_padding" android:focusable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentStart="true">
        <include android:layout_gravity="center_vertical" android:id="@id/clock" android:layout_width="wrap_content" android:layout_height="fill_parent" layout="@layout/split_clock_view" />
        <com.android.systemui.statusbar.policy.DateView android:textAppearance="@style/TextAppearance.StatusBar.Expanded.Date" android:gravity="bottom" android:id="@id/date" android:paddingBottom="@dimen/headerview_date_bottom_margin_small" android:layout_width="wrap_content" android:layout_height="fill_parent" android:singleLine="true" android:layout_marginStart="@dimen/headerview_date_start_margin" systemui:datePattern="@string/status_view_wday_day_month_no_year" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/buttons_container" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginEnd="@dimen/headerview_button_container_end_margin" android:layout_alignParentEnd="true">
        <FrameLayout android:gravity="center" android:layout_width="wrap_content" android:layout_height="36.0dip">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent">
                <TextView android:textSize="@dimen/qs_edit_button_text_size" android:textStyle="bold" android:textColor="@color/status_bar_header_edit_tint_color" android:gravity="center" android:id="@id/edit_text_button" android:background="@drawable/ripple_drawable" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@string/qs_edit_setting_edit_button" android:singleLine="true" android:fontFamily="sec-roboto-light" android:paddingStart="4.0dip" android:paddingEnd="4.0dip" />
                <ImageView android:id="@id/headerview_divider" android:background="@color/status_bar_header_divider_tint_color" android:focusable="true" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="18.0dip" android:layout_marginStart="18.0dip" />
            </LinearLayout>
            <ImageView android:layout_gravity="end" android:id="@id/setting_button" android:background="@drawable/ripple_drawable_20dp" android:focusable="true" android:layout_width="@dimen/headerview_button_size" android:layout_height="@dimen/headerview_button_size" android:src="@drawable/ic_notify_quicksettings" android:scaleType="center" android:tint="@color/status_bar_header_setting_tint_color" android:contentDescription="@string/accessibility_desc_settings" />
        </FrameLayout>
        <com.android.systemui.statusbar.phone.MultiUserSwitch android:id="@id/multi_user_switch" android:background="@drawable/ripple_drawable_20dp" android:visibility="gone" android:layout_width="@dimen/multi_user_avatar_expanded_size" android:layout_height="@dimen/multi_user_avatar_expanded_size" android:layout_marginStart="@dimen/headerview_button_margin">
            <ImageView android:layout_gravity="center" android:id="@id/multi_user_avatar" android:layout_width="@dimen/multi_user_avatar_expanded_size" android:layout_height="@dimen/multi_user_avatar_expanded_size" android:scaleType="centerInside" />
            <View android:layout_gravity="center" android:id="@id/multi_user_frame" android:background="@drawable/multi_user_switch_bg" android:layout_width="@dimen/multi_user_avatar_expanded_size" android:layout_height="@dimen/multi_user_avatar_expanded_size" />
        </com.android.systemui.statusbar.phone.MultiUserSwitch>
        <ImageView android:id="@id/expand_button" android:background="@drawable/ripple_drawable_20dp" android:focusable="true" android:layout_width="@dimen/headerview_button_size" android:layout_height="@dimen/headerview_button_size" android:src="@drawable/ic_notify_expander_open" android:scaleType="center" android:tint="@color/status_bar_header_expand_tint_color" android:layout_marginStart="@dimen/headerview_button_margin" />
    </LinearLayout>
    <LinearLayout android:gravity="end|center" android:id="@id/detail_header" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentEnd="true">
        <TextView android:textAppearance="@style/TextAppearance.QS.DetailButton" android:id="@android:id/button2" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/quick_settings_more_settings" android:layout_marginEnd="6.0dip" style="@style/QSBorderlessButton" />
        <TextView android:textAppearance="@style/TextAppearance.QS.DetailButton" android:id="@android:id/button1" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/quick_settings_done" style="@style/QSBorderlessButton" />
    </LinearLayout>
</com.android.systemui.statusbar.phone.TWStatusBarHeaderView>